--- a/index.html
+++ b/index.html
@@ -401,6 +401,17 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-form-container">
+                <form>
+                    <label class="footer-subscribe-form">
+                        <span class="footer-subscribe-slogan">Подпишитесь на рассылку</span>
+                        <div>
+                            <input class="footer-subscribe-field" type="email" name="email" placeholder="E-mail" />
+                            <button class="footer-subscribe-button btn" type="submit">Подписаться</button>
+                        </div>
+                    </label>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
