--- a/index.html
+++ b/index.html
@@ -57,7 +57,40 @@
         <section class="hero">
             <div class="backdrop is-hidden" data-modal>
                 <div class="hero-modal">
-                    <button class="modal-close" data-modal-close>&#10005</button>
+                    <button class="modal-close" data-modal-close>
+                        <svg class="icon-close" width="18px" height="18px">
+                            <use href="./images/icons.svg#icon-close">
+                            </use>
+                        </svg>
+                    </button>
+                    <form class="modal-form">
+                        <p class="modal-slogan">Оставьте свои данные, мы вам перезвоним</p>
+                        <label class="modal-label">
+                            <span class="modal-label-name">Имя</span>
+                            <input class="modal-input-text" type="text" name="name">
+                            <svg class="modal-icon" width="18px" height="18px">
+                                <use href="./images/icons.svg#icon-person">
+                                </use>
+                            </svg>
+                        </label>
+                        <label class="modal-label">
+                            <span class="modal-label-name">Телефон</span>
+                            <input class="modal-input-text" type="tel" name="tel">
+                            <svg class="modal-icon" width="18px" height="18px">
+                                <use href="./images/icons.svg#icon-phone">
+                                </use>
+                            </svg>
+                        </label>
+                        <label class="modal-label">
+                            <span class="modal-label-name">Почта</span>
+                            <input class="modal-input-text" type="email" name="email">
+                            <svg class="modal-icon" width="18px" height="18px">
+                                <use href="./images/icons.svg#icon-email">
+                                </use>
+                            </svg>
+                        </label>
+
+                    </form>
                 </div>
             </div>
             <div class="container">
@@ -403,13 +436,17 @@
             </div>
             <div class="footer-form-container">
                 <form>
-                    <label class="footer-subscribe-form">
+                    <label class="footer-subscribe-label">
                         <span class="footer-subscribe-slogan">Подпишитесь на рассылку</span>
-                        <div>
-                            <input class="footer-subscribe-field" type="email" name="email" placeholder="E-mail" />
-                            <button class="footer-subscribe-button btn" type="submit">Подписаться</button>
-                        </div>
+                        <input class="footer-subscribe-field" type="email" name="email" placeholder="E-mail" />
                     </label>
+                    <button class="footer-subscribe-button btn" type="submit">
+                        <span>Подписаться</span>
+                        <svg class="footer-subscribe-icon" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-send">
+                            </use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </div>
