--- a/portfolio.html
+++ b/portfolio.html
@@ -258,6 +258,21 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-form-container">
+                <form>
+                    <label class="footer-subscribe-label">
+                        <span class="footer-subscribe-slogan">Подпишитесь на рассылку</span>
+                        <input class="footer-subscribe-field" type="email" name="email" placeholder="E-mail" />
+                    </label>
+                    <button class="footer-subscribe-button btn" type="submit">
+                        <span>Подписаться</span>
+                        <svg class="footer-subscribe-icon" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-send">
+                            </use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
